# Ros2_multifloor

./: .gitignore  LICENSE  README.md
docs/superpowers/plans/: 2026-04-12-near-field-person-detection.md  2026-04-16-room-goal-offset.md
hotel_luggage_robot/: CMakeLists.txt  SETUP.md  package.xml  requirements.txt
hotel_luggage_robot/action/: LuggageDelivery.action
hotel_luggage_robot/config/: detection.yaml  hotel_nav2.yaml  wormhole_navigator.yaml
hotel_luggage_robot/database/: create_demo_db.py  hotel_wormholes.db
hotel_luggage_robot/launch/: detection.launch.py  hotel_robot.launch.py  navigation.launch.py  rotav_integration.launch.py
hotel_luggage_robot/maps/: README.md  floor1.pgm  floor1.yaml  floor2.pgm  floor2.yaml  floor_1.yaml  floor_2.yaml
hotel_luggage_robot/msg/: DetectedPerson.msg  DetectedPersonArray.msg
hotel_luggage_robot/rviz/: hotel_robot.rviz
hotel_luggage_robot/scripts/: cmd_vel_relay.py  elevator_controller.py  fake_joint_state_publisher.py  hotel_gui.py  hotel_map_generator.py  hotel_task_manager.py  hotel_world_generator.py  person_detector.py  publish_initial_pose.py  rotav_elevator_bridge.py  wormhole_navigator.py
hotel_luggage_robot/src/: multi_floor_navigator.cpp
hotel_luggage_robot/srv/: CallElevator.srv
hotel_luggage_robot/urdf/: rotav.xacro
hotel_luggage_robot/worlds/: hotel_actors.world  hotel_two_floor.world
