<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hotel_luggage_robot</name>
  <version>1.0.0</version>
  <description>
    Multi-floor hotel luggage delivery robot with camera+LiDAR sensor fusion,
    real-time person detection (YOLOv8), and elevator-based floor transitions.
    Integrates nav2-virtual-layer for dynamic obstacle management and
    a ROS2-ported multi-map navigation system for floor switching.
  </description>

  <maintainer email="robot@hotel.com">Hotel Robot Team</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- C++ core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Navigation -->
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Visualization -->
  <depend>visualization_msgs</depend>

  <!-- Virtual Layer (from repo 1) – optional, graceful degradation if absent -->
  <exec_depend condition="$ROS_DISTRO != ''">nav2_virtual_layer</exec_depend>

  <!-- Map Server -->
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- YAML -->
  <depend>yaml-cpp</depend>

  <!-- SQLite3 (for wormhole database) -->
  <exec_depend>python3-sqlite3</exec_depend>

  <!-- Python nodes -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-cv2</exec_depend>

  <!-- Message/service/action generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rosidl_default_runtime</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
